feat: lay cms foundation with role guards

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ PEXELS_API_KEY=""
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/townhub"
 ADMIN_EMAILS="admin@example.com"
+TOWN_ADMIN_EMAILS="stykk-admin@example.com"
