--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ GOOGLE_MAPS_API_KEY=""
 GOOGLE_DISTANCE_MATRIX_API_KEY=""
 SUPABASE_URL=""
 SUPABASE_ANON_KEY=""
+SUPABASE_SERVICE_ROLE_KEY=""
+SUPABASE_STORAGE_BUCKET="townapp-media"
 
 # Image Fetching APIs
 GOOGLE_CUSTOM_SEARCH_API_KEY=""
