--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NEXT_PUBLIC_TOWN_CENTER_COORDS="65.074,-22.730"
 NEXT_PUBLIC_DEFAULT_LANG="en"
 
 NEXT_PUBLIC_OPEN_METEO_BASE="https://api.open-meteo.com/v1/forecast"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 GOOGLE_MAPS_API_KEY=""
 GOOGLE_DISTANCE_MATRIX_API_KEY=""
 SUPABASE_URL=""
